Stopped the illustrations stretching across the page

--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,6 @@ body {
     background-color: #f9faf8;
     padding-top: 40px;
     padding-bottom: 100px;
-    justify-content: center;
 }
 
 .info_text {
@@ -103,7 +102,7 @@ body {
 
 .illustrations {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 50px;
 }
 
